--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face {
   font-family: Proxima Nova;
-  src: url("/fonts/Proxima\ Nova\ Font.otf");
+  src: url("../fonts/fonts.tsx/Proxima Nova Font.otf");
+  font-weight: 400;
+  font-style: normal;
 }
 
 * {
@@ -15,6 +18,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-style: normal;
 }
 
 body {
@@ -25,5 +29,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-family: Proxima Nova;
 }
 
