--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-style: normal;
+  font-family: "Proxima Nova Rg", sans-serif;
 }
 
 body {
