--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  font-family: Proxima Nova;
+  font-family: "Proxima Nova Rg", sans-serif;
 }
 
